--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
-  <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs>
-  	<a-marker-camera type='pattern' url='./marker/pattern-marker.patt'>
-            <a-box position='0 0.5 0' material='color: black;'></a-box>
-  	</a-marker-camera>
-    </a-scene>
-  </body>
+
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+    <a-marker preset="hiro">
+      <a-box position='0 0.5 0' material='color: black;'></a-box>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
+</body>
+
 </html>
