--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-    <a-marker preset="hiro">
-        <a-box position='-1 0.5 -3' material='color: blue;'></a-box>
-        <!-- <a-sphere position="0 1.25 -5" material='color: pink;'></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" material='color: pink;'></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" material='color: green;'></a-plane>
-        <a-sky material='color: grey;'></a-sky> -->
-    </a-marker>
+      <a-marker-camera preset='custom' type='pattern' url='markers/pattern-marker.patt'></a-marker-camera>
+      <a-box position='-1 0.5 -3' material='color: blue;'></a-box>
+    </a-marker-camera>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
