--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
 
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-      <a-marker-camera preset='custom' type='pattern' url='markers/pattern-marker.patt'></a-marker-camera>
-      <a-box position='-1 0.5 -3' material='color: blue;'></a-box>
-    </a-marker-camera>
+  <a-scene embedded arjs='debugUIEnabled: false;'>
+    <a-marker preset="hiro">
+      <a-box position='0 0.5 0' material='color: black;'></a-box>
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
