--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
     <a-marker preset="hiro">
-      <a-box position='0 0.5 0' material='color: black;'></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="red"></a-sphere>
+      <!-- <a-box position='0 0.5 0' material='color: black;'></a-box> -->
+      <a-sphere position="0 1.25 -5" radius="1.25" material='color: red;'></a-sphere>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
