--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a-scene embedded arjs='debugUIEnabled: false;'>
     <a-marker preset="hiro">
       <!-- <a-box position='0 0.5 0' material='color: black;'></a-box> -->
-      <a-sphere position="0 1.25 -5" radius="1.25" material='color: red;'></a-sphere>
+      <a-sphere position="0 1.25 -5" material='color: red;'></a-sphere>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
