--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
     <a-marker preset="hiro">
-      <a-box position="0 0.5 0" rotation="0 45 0" material='color: 00bfff;'></a-box>
-      <a-sphere position="0 1 -1" radius="1"  material='color: ff1493;'></a-sphere>
-      <a-cylinder position="0 0.75 -1.5" radius="0.5" height="1.5"  material='color: ffff00;'></a-cylinder>
-      <a-plane position="0 1 -2" rotation="-90 0 0" width="4" height="4"  material='color: 	66cdaa;'></a-plane>
+      <a-box position="0 0.5 0" rotation="0 45 0" material='color: blue;'></a-box>
+      <a-cylinder position="0 0.75 -1" radius="0.5" height="1.5"  material='color: yellow;'></a-cylinder>
+      <a-sphere position="0 1 -1.5" radius="1"  material='color: pink;'></a-sphere>
+      <a-plane position="0 1.5 -2" rotation="-90 0 0" width="4" height="4"  material='color: 	green;'></a-plane>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
