--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
     <a-marker preset="hiro">
-      <a-box position="-0.75 0.5 -2" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-box position="-0.75 0.5 -2" color="#4CC3D9"></a-box>
       <a-sphere position="0 1 -3" radius="1" color="#EF2D5E"></a-sphere>
       <a-cylinder position="0.75 0.5 -2" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="#7BC8A4"></a-plane>
+      <a-plane position="0 0 -3" rotation="-90 0 0" width="3" height="3" color="#7BC8A4"></a-plane>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
