--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
-    <a-marker preset="hiro">
+    <!-- <a-marker preset="hiro">
       <a-box position="-0.75 0.5 -2" rotation="0 45 0" color="blue"></a-box>
       <a-cylinder position="0.75 0.5 -2" radius="0.5" height="1" color="yellow"></a-cylinder>
-      <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green"></a-plane>
-    </a-marker>
+    </a-marker> -->
     <a-marker preset='kanji'>
+        <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green"></a-plane>
         <a-sphere position="0 1 -4" radius="1" color="red"></a-sphere>
     </a-marker>
     <a-entity camera></a-entity>
