multiple objects added

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <a-sphere position="0 1 -4" radius="1" color="red">
             <a-animation attribute="rotation"
             dur="10000"
-            fill="forwards"
-            to="0 360 0"
-            repeat="indefinite">
+            from ="0 1 -4"
+            to="0 360 -4"
+            repeat="indefinite"
+            direction="alternate">
             </a-animation>
         </a-sphere>
         <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green">
