--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
-    <!-- <a-marker preset="hiro">
+    <a-marker preset="hiro">
       <a-box position="-0.75 0.5 -2" rotation="0 45 0" color="blue"></a-box>
       <a-cylinder position="0.75 0.5 -2" radius="0.5" height="1" color="yellow"></a-cylinder>
-    </a-marker> -->
+    </a-marker>
     <a-marker preset='kanji'>
         <a-sphere position="0 1 -4" radius="1" color="red">
             <a-animation attribute="position"
