multiple objects added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a-marker preset='kanji'>
         <a-sphere position="0 1 -4" radius="1" color="red">
             <a-animation attribute="position"
-            dur="10000"
             from ="0 1 -4"
             to="3 1 -4"
+            repeat="indefinite"
             direction="alternate">
             </a-animation>
         </a-sphere>
