--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <a-marker preset='kanji'>
         <a-sphere position="0 1 -4" radius="1" color="red">
             <a-animation attribute="position"
+            dur="10000"
+            fill="forwards"
             from ="0 1 -4"
             to="3 1 -4"
             repeat="indefinite"
