--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
@@ -19,10 +17,18 @@
             </a-animation>
         </a-sphere>
         <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green">
+            <a-animation attribute="position"
+            dur="10000"
+            from ="0 0 -2.5"
+            to="0 3 -2.5"
+            repeat="indefinite"
+            direction="alternate">
         </a-plane>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
 
 </html>
