--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <a-marker preset="hiro">
       <a-box position="-0.75 0.5 -2" rotation="0 45 0" color="blue"></a-box>
       <a-cylinder position="0.75 0.5 -2" radius="0.5" height="1" color="yellow"></a-cylinder>
+      <a-sphere position="0 1 -4" radius="1" color="red">
+          <a-animation attribute="position"
+          dur="10000"
+          from ="0 1 -4"
+          to="3 1 -4"
+          repeat="indefinite"
+          direction="alternate">
+          </a-animation>
+      </a-sphere>
+      <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green">
+      </a-plane>
     </a-marker>
     <a-marker preset='kanji'>
-        <a-sphere position="0 1 -4" radius="1" color="red">
-            <a-animation attribute="position"
-            dur="10000"
-            from ="0 1 -4"
-            to="3 1 -4"
-            repeat="indefinite"
-            direction="alternate">
-            </a-animation>
-        </a-sphere>
-        <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green">
-        </a-plane>
+        <a-image  src="./assets/sofa1.png" 
+        width="1.6" 
+        height="0.8" 
+        position="-1 0.5 0">
+      </a-image>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
