--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </a-plane>
     </a-marker>
     <a-marker preset='kanji'>
-        <a-image  src="./assets/sofa1.png" 
+        <a-image  src="./assets/sofa.png" 
         width="1.6" 
         height="0.8" 
         position="-1 0.5 0">
