--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <html>
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='debugUIEnabled: false;'>
     <a-marker preset="hiro">
-      <a-box position="-0.75 0.5 -2" rotation="0 45 0" color="blue"></a-box>
-      <a-cylinder position="0.75 0.5 -2" radius="0.5" height="1" color="yellow"></a-cylinder>
-      <a-sphere position="0 1 -4" radius="1" color="red">
-          <a-animation attribute="position"
-          dur="10000"
-          from ="0 1 -4"
-          to="3 1 -4"
-          repeat="indefinite"
-          direction="alternate">
-          </a-animation>
-      </a-sphere>
-      <a-plane position="0 0 -2.5" rotation="-90 0 0" width="2" height="2" color="green">
-      </a-plane>
+      <a-box 
+      position="-0.75 0.5 -2" 
+      rotation="0 45 0" 
+      color="blue"></a-box>
+      <a-cylinder 
+      position="0.75 0.5 -2" 
+      radius="0.5" height="1" 
+      color="yellow"></a-cylinder>
     </a-marker>
     <a-marker preset='kanji'>
-        <a-image  src="./assets/sofa.png" 
-        width="1.6" 
-        height="0.8" 
-        position="-1 0.5 0">
-      </a-image>
+        <a-sphere position="0 1 -4" radius="1" color="red">
+            <a-animation 
+            attribute="position"
+            dur="10000"
+            from ="0 1 -4"
+            to="3 1 -4"
+            repeat="indefinite"
+            direction="alternate">
+            </a-animation>
+        </a-sphere>
+        <a-plane 
+        position="0 0 -2.5" 
+        rotation="-90 0 0"
+         width="2" 
+         height="2" 
+         color="green">
+        </a-plane>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
 
 </html>
